--- a/postit/src/app/home/home.page.html
+++ b/postit/src/app/home/home.page.html
@@ -1,20 +1,48 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-toolbar>
+  <ion-title size="slot"> Desafio em aula - Accordion com os exemplos dados em aula</ion-title>
+</ion-toolbar>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+<ion-accordion-group>
+  <ion-accordion value="first">
+    <ion-item slot="header" color="light">
+      <ion-label>Botão</ion-label>
+    </ion-item>
+    <div class="ion-padding" slot="content">
+      <ion-button class="clique" size="large" fill="outline">
+        CLIQUE 
+      </ion-button>
+    </div>
+  </ion-accordion>
+  <ion-accordion value="second">
+    <ion-item slot="header" color="light">
+      <ion-label>Calendário</ion-label>
+    </ion-item>
+    <div class="ion-padding" slot="content">
+      <ion-datetime></ion-datetime>
+    </div>
+  </ion-accordion>
+  <ion-accordion value="third">
+    <ion-item slot="header" color="light">
+      <ion-label>Selecione</ion-label>
+    </ion-item>
+    <div class="ion-padding" slot="content">
+      <ion-select id="frutas" interface="action-sheet" placeholder="Select a fruit">
+        <ion-select-option>Abacaxi</ion-select-option>
+        <ion-select-option>Laranja</ion-select-option>
+        <ion-select-option>Uva</ion-select-option>
+        <ion-select-option>Melancia</ion-select-option>
+      </ion-select>
+    </div>
+  </ion-accordion>
+  <ion-accordion value="forth">
+    <ion-item slot="header" color="light">
+      <ion-label>Imagem</ion-label>
+    </ion-item>
+    <div class="ion-padding" slot="content">
+      <ion-img
+        src="https://pbs.twimg.com/media/EwHaSILWQAQCWCD.jpg">
+      </ion-img>
+    </div>
+  </ion-accordion>
+</ion-accordion-group>
+    
