--- a/postit/src/app/home/home.page.html
+++ b/postit/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-toolbar>
-  <ion-title size="slot"> Desafio em aula - Accordion com os exemplos dados em aula</ion-title>
+  <ion-title size="large"> Desafio em aula - Accordion com exemplos dados em aula</ion-title>
 </ion-toolbar>
 
 <ion-accordion-group>
@@ -9,7 +9,7 @@
     </ion-item>
     <div class="ion-padding" slot="content">
       <ion-button class="clique" size="large" fill="outline">
-        CLIQUE 
+        CLIQUE!
       </ion-button>
     </div>
   </ion-accordion>
