--- a/postit/src/app/pages/login/login.page.html
+++ b/postit/src/app/pages/login/login.page.html
@@ -8,12 +8,12 @@
 
     <div class="container--inputs">
     <span>E-mail</span>
-    <input type="text">
+    <input type="text" [(ngModel)] = "loginPayload.email">
     <span>Senha</span>
-    <input type="password">
+    <input type="password" [(ngModel)] = "loginPayload.password">
     </div>
 
-    <ion-button>Confirmar</ion-button>
+    <ion-button (click)="login()">Confirmar</ion-button>
   
     <p>Não tem conta? <a href="">Cadastre-se!</a></p>
   
