--- a/postit/src/app/pages/login/login.page.html
+++ b/postit/src/app/pages/login/login.page.html
@@ -1,3 +1,4 @@
+
 <div class="login">
   <img class="background" src="../../../assets/images/Imagem 5.png">
 
@@ -5,17 +6,19 @@
 
   <div class="container">
     <img src="../../../assets/images/LOGO.svg">
-
+    
     <div class="container--inputs">
-    <span>E-mail</span>
-    <input type="text" [(ngModel)] = "loginPayload.email">
-    <span>Senha</span>
-    <input type="password" [(ngModel)] = "loginPayload.password">
+      <span>E-mail</span>
+      <input type="text" [(ngModel)]="loginPayload.email">
+      <span>Senha</span>
+      <input type="password" [(ngModel)]="loginPayload.password">
     </div>
-
-    <ion-button (click)="login()">Confirmar</ion-button>
-  
-    <p>Não tem conta? <a href="">Cadastre-se!</a></p>
-  
+    
+    <ion-button [class.disabled]="!canLogin()" (click)="login()">
+      {{ isLoading ? 'carregando...' : 'confirmar' }}
+      <app-half-circle-spinner *ngIf="isLoading" [animationDuration]="1000" [size]="25" [color]="'white'"></app-half-circle-spinner>
+    </ion-button>
+    
+    <p>Não possui conta? <a href="">Cadastre-se!</a></p>
   </div>
 </div>
