--- a/postit/src/app/pages/login/login.page.html
+++ b/postit/src/app/pages/login/login.page.html
@@ -1,17 +1,18 @@
 
 <div class="login">
   <img class="background" src="../../../assets/images/Imagem 5.png">
+  
 
   <img class="detail" src="../../../assets/images/Grupo 19.svg">
 
   <div class="container">
-    <img src="../../../assets/images/LOGO.svg">
+    <app-logo src="../../../assets/images/LOGO.svg" [full]="false"></app-logo>
     
     <div class="container--inputs">
       <span>E-mail</span>
-      <input type="text" [(ngModel)]="loginPayload.email">
+      <input class="input" type="text" [(ngModel)]="loginPayload.email">
       <span>Senha</span>
-      <input type="password" [(ngModel)]="loginPayload.password">
+      <input class="input" type="password" [(ngModel)]="loginPayload.password">
     </div>
     
     <ion-button class="button" [class.disabled]="!canLogin()" (click)="login()">
