--- a/postit/src/app/pages/login/login.page.scss
+++ b/postit/src/app/pages/login/login.page.scss
@@ -26,7 +26,7 @@
   height: 75vh;
   transform: translateY(-60px);
 
-  img {
+  app-logo {
     width: 22%;
     height: 30%;
 
@@ -50,29 +50,10 @@
       padding-left: 1rem;
     }
 
-    input {
-      border: 1px solid #DBDBDB;
-      background-color: transparent;
-      outline: 0;
-      margin-bottom: 1rem;
-      border-radius: 20px;
-      padding: 0.95rem;
-      color: black;
-    }
+    
   }
 
-  ion-button {
-    --border-radius: 20px;
-    --background: #2D9FDB;
-    --box-shadow: none;
-    font-style: italic;
-    font-size: 0.8rem;
-    width: 80%;
-    height: 3rem;
-    margin-top: 2rem;
-    text-transform: capitalize;
-  }
-
+  
   p {
     color: #707070;
     margin-top: 1.5rem;
