--- a/postit/src/app/pages/login/login.page.html
+++ b/postit/src/app/pages/login/login.page.html
@@ -6,7 +6,7 @@
   <img class="detail" src="../../../assets/images/Grupo 19.svg">
 
   <div class="container">
-    <app-logo src="../../../assets/images/LOGO.svg" [full]="false"></app-logo>
+    <app-logo src="../../../assets/images/LOGO.svg" [full]="false" (onClick)="logoClick($event)"></app-logo>
     
     <div class="container--inputs">
       <span>E-mail</span>
