--- a/postit/src/app/components/comment/comment.component.html
+++ b/postit/src/app/components/comment/comment.component.html
@@ -1,11 +1,9 @@
 <div class="comment">  
     <ion-avatar class="user--avatar">
-      <img src="../../../assets/users/02" />
-    </ion-avatar>
+      <img src="../../../assets/users/02" alt="avatar" />
+</ion-avatar>
     <div class="comment--info">
-      <span class="comment--info--user--name">
-        Sandra Genini
-      </span>
+      <span class="comment--info--user--name">Sandra Genini</span>
       <span>
         {{ comment.comment }}
       </span>
