--- a/postit/src/app/components/navbar/navbar.component.scss
+++ b/postit/src/app/components/navbar/navbar.component.scss
@@ -11,10 +11,16 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-  
-    width: 90%;
-    height: 4rem;
+    width: calc(21rem + 3vw);
+    height: 3.2rem;
     background-color: white;
-    box-shadow: 0px 0px 9px #00000029;
-    border-radius: 33px;
+    box-shadow: 0px 0px 20px 0px #bbb7b7;
+    border-radius: 40px;
+  
+    .navbar--item {
+      img {
+        width: 80%;
+        margin-top: 2px;
+      }
+    }
   }
