Atualização home e feed

--- a/postit/src/app/pages/main/feed/feed.page.html
+++ b/postit/src/app/pages/main/feed/feed.page.html
@@ -1,8 +1,8 @@
 <div class="feed">  
-  <img class="detail" src="assets/imgs/background.svg">
+  <img class="detail" src="../../../../assets/images/FEED/Grupo 19.svg">
 
   <header>
-    <img class="noteAndFriends" src="assets/imgs/note_and_friends.svg">
+    <img class="noteAndFriends" src="../../../../assets/images/FEED/Logo Feed.svg">
   </header>
 
   <main>
