--- a/postit/src/app/pages/main/home/home.page.html
+++ b/postit/src/app/pages/main/home/home.page.html
@@ -1,7 +1,9 @@
 <div class="home">
+  <img class="detail" src="../../../../assets/images/FEED/Grupo 19.svg">
 
   <header>
     <img src="../../../../assets/images/LOGO.svg" alt="Logo">
+    
   </header>
 
   <main>
@@ -15,21 +17,27 @@
   <div class="home--new-postit">
     <div class="home--new-postit--item" 
         (click)="openNewPostModal(postItColorEnum.RED)"
-        [style.background-color]="postItColorEnum.RED"></div>
+        [style.background-color]="postItColorEnum.RED">
+      </div>
     <div class="home--new-postit--item" 
         (click)="openNewPostModal(postItColorEnum.PINK)"
-        [style.background-color]="postItColorEnum.PINK"></div>
+        [style.background-color]="postItColorEnum.PINK">
+      </div>
     <div class="home--new-postit--item" 
         (click)="openNewPostModal(postItColorEnum.GREEN)"
-        [style.background-color]="postItColorEnum.GREEN"></div>
+        [style.background-color]="postItColorEnum.GREEN">
+      </div>
     <div class="home--new-postit--item" 
         (click)="openNewPostModal(postItColorEnum.YELLOW)"
-        [style.background-color]="postItColorEnum.YELLOW"></div>
+        [style.background-color]="postItColorEnum.YELLOW">
+      </div>
     <div class="home--new-postit--item" 
         (click)="openNewPostModal(postItColorEnum.BLUE)"
-        [style.background-color]="postItColorEnum.BLUE"></div>
+        [style.background-color]="postItColorEnum.BLUE">
+      </div>
     <div class="home--new-postit--item" 
         (click)="openNewPostModal(postItColorEnum.PURPLE)"
-        [style.background-color]="postItColorEnum.PURPLE"></div>
+        [style.background-color]="postItColorEnum.PURPLE">
+      </div>
   </div>
 </div>
