--- a/postit/src/app/pages/main/home/home.page.scss
+++ b/postit/src/app/pages/main/home/home.page.scss
@@ -1,6 +1,16 @@
-.home {
-    background-color: white;
 
+.home {
+
+    .detail {
+        position: fixed;
+        top: -20px;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        object-fit: cover;
+        z-index: -1;
+    }
+   
     header {
         width: 100%;
 
@@ -29,6 +39,7 @@
         }
     }
 
+  
     &--new-postit {
         position: fixed;
         left: 16.6rem;
@@ -76,3 +87,4 @@
         }
     }
 }
+
