--- a/postit/src/app/components/postit/postit.component.scss
+++ b/postit/src/app/components/postit/postit.component.scss
@@ -1,9 +1,8 @@
 .postit {
-    width: 43vw;
-    height: 35vh;
-
+    width: 100%;
+    height: 36vh;
     color: #343434;
-    padding: 1rem;
+    padding: 0.1rem 1rem;
 
     h6 {
         font-size: .9rem;
@@ -11,7 +10,7 @@
     }
 
     p {
-        font-size: .8rem;
+        font-size: .7rem;
         margin-bottom: 1rem;
         // max-height: 25vh;
         overflow: hidden;
