--- a/postit/src/app/components/postit/postit.component.html
+++ b/postit/src/app/components/postit/postit.component.html
@@ -3,8 +3,6 @@
       <h6>{{ postIt.title }}</h6>
     </header>
     <main>
-      <p>
-        {{ postIt.annotation }}
-      </p>
+      <p>{{ postIt.annotation }}</p>
     </main>
   </div>
