--- a/postit/src/app/components/feed-item/feed-item.component.scss
+++ b/postit/src/app/components/feed-item/feed-item.component.scss
@@ -1,106 +1,117 @@
-.feed-item {
+.feed-item  {
+    background-color: #D7DF6B;
     width: 100%;
     z-index: 100;
     padding: 1rem;
-
-
+    
     header {
         display: flex;
         align-items: center;
-
+        width: 100%;
+    
         .user--avatar {
             width: 3rem;
             height: 3rem;
         }
-
+    
         .user--info {
+            flex: 1;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            justify-content: center;
-            flex: 1;
-            padding-left: 1.5rem;
+            padding-top: .2rem;
+            padding-left: 1.1rem;
 
             span {
                 color: #4E4E4E;
             }
-
+    
             &--name {
-                font-size: 1rem;
+                font-size: .95rem;
                 font-style: italic;
-                font-weight: bold;
+                font-weight: 600;
             }
-
+    
             &--role {
-                font-size: 0.7rem;
+                font-size: .68rem;
+                font-weight: 500;
             }
         }
-
+    
         .read--more {
-            width: 5rem;
-            height: 2rem;
+            margin-top: -.8rem;
+            font-size: .81rem;
             background: none;
             border: none;
-            color: #4E4E4E;
             font-weight: bold;
+            text-align: end;
+    
+            color: #4E4E4E;
         }
     }
-
+    
     main {
-        padding: 1rem;
         color: #4E4E4E;
-        min-height: 15rem;
-        max-height: 15rem;
+        width: 100%;
+        max-height: 14.5rem;
+        min-height: 14.5rem;
 
-        .title {            
-            font-weight: bold;
+        .title {
+            padding: .6rem 0 1.5rem 0;
+            font-size: 1.18rem;
+            font-weight: 500;  
         }
 
         .annotation {
+            font-size: .82rem;
             overflow: hidden;
             text-overflow: ellipsis;
             display: -webkit-box;
             -webkit-box-orient: vertical;
-            -webkit-line-clamp: 8;
-            line-clamp: 8;
+            -webkit-line-clamp: 7;
+            line-clamp: 7;
         }
     }
-
+    
     footer {
         display: flex;
-
+    
         .comment--section {
-            flex: 1;
+            flex: 1;    
             display: flex;
             align-items: center;
-            justify-content: space-evenly;
-            border-radius: 1rem;
-            border: 1px solid #000;
-            padding: 0 0.4rem;
+            justify-content: space-between;
+            border-radius: .8rem;
+            border: 1px solid #4E4E4E;
+            padding: .25rem .7rem;
 
             input {
-                background: transparent;
+                background-color: transparent;
                 border: none;
-                color: #000;
+                color: #606060;
                 outline: 0;
+                font-size: .82rem;
             }
 
             button {
                 background: none;
-                color: #4E4E4E;
+                color: #606060;
+                font-weight: 500;
+                font-size: .82rem;
             }
         }
-    }
-
-    .actions--section {
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        width: 5rem;
-
-        img {
-            width: 1.5rem;
-            height: 1.5rem;
+    
+        .actions--section {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 4.5rem;
+            padding-left: 1rem;
+        
+            img {
+                width: 1.3rem;
+                height: 1.3rem;
+            }
         }
     }
 }
