--- a/postit/src/app/components/navbar/navbar.component.scss
+++ b/postit/src/app/components/navbar/navbar.component.scss
@@ -1,26 +1,20 @@
 :host {
-    z-index: 999;
-    position: absolute;
-    bottom: 1.5rem;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    width: calc(21rem + 3vw);
-    height: 3.2rem;
-    background-color: white;
-    box-shadow: 0px 0px 20px 0px #bbb7b7;
-    border-radius: 40px;
-  
-    .navbar--item {
-      img {
-        width: 80%;
-        margin-top: 2px;
-      }
-    }
-  }
+  z-index: 999;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  bottom: 1.5rem;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+
+  width: 90%;
+  height: 4rem;
+  background-color: #fff;
+  box-shadow: 0 0 9px #00000029;
+  border-radius: 33px;
+}
