--- a/postit/src/app/components/postit/postit.component.scss
+++ b/postit/src/app/components/postit/postit.component.scss
@@ -5,8 +5,9 @@
     padding: 0.1rem 1rem;
 
     h6 {
-        font-size: .9rem;
+        font-size: 1rem;
         text-align: center;
+        margin:  1rem 0;
     }
 
     p {
