--- a/postit/src/app/pages/login/login.page.html
+++ b/postit/src/app/pages/login/login.page.html
@@ -1,80 +1,44 @@
-
-<div class="initial">
-
-  <div class="initial--background">
-    <img src="../../../assets/images/Imagem 5.png" alt="">
-  </div>
-
-  <div class="body" [class.signing--body]="isSigning">
-
-  <header>
-    <div class="logo" [class.signing--logo]="isSigning">
-      <img [class.hidden]="!isSigning" (click)="isSigning = !isSigning" src="../../../assets/images/Grupo 19.svg" alt="">
-      <app-logo [class.signing--logo--img]="isSigning" src="../../../assets/images/LOGO.svg" [full]="false" (onClick)="logoClick($event)"></app-logo>
-        <div class="empty"></div>
+<div class="login">
+  <img class="background" src="../../../assets/images/Imagem 5.png">
+  <img class="detail" src="../../../assets/images/Grupo 19.svg">
+  
+  <div class="container" [class.container--sign]="showSign">
+    <div class="container--header" [class.container--header__row]="showSign">
+      <img *ngIf="showSign" (click)="showSign = false" src="../../../assets/images/CADASTRO/Caminho 90.svg">
+      <app-logo src="../../../assets/images/LOGO.svg" [full]="false" (clicked)="logoClick()"></app-logo>
     </div>
-  </header>
 
-  <ng-template *ngIf="!isSigning" [ngTemplateOutlet]="signing" ></ng-template>
-  <ng-template *ngIf="isSigning" [ngTemplateOutlet]="signup"></ng-template>
+    <div *ngIf="!showSign" class="container--inputs">
+      <span>E-mail</span>
+      <input (keydown.enter)="password.focus()" class="input" type="text" [(ngModel)]="loginPayload.email">
+      <span>Senha</span>
+      <input #password (keydown.enter)="login()" class="input" type="password" [(ngModel)]="loginPayload.password">
+    </div>
 
+    <div *ngIf="showSign" class="container--inputs">
+      <span>Nome completo*</span>
+      <input (keydown.enter)="email.focus()" class="input" type="text" [(ngModel)]="registerPayload.name">
+
+      <span>E-mail*</span>
+      <input #email (keydown.enter)="confirmEmail.focus()" class="input" type="text" [(ngModel)]="registerPayload.email">
+    
+      <span>Confirme o E-mail*</span>
+      <input #confirmEmail (keydown.enter)="password.focus()" class="input" type="text" [(ngModel)]="registerPayload.repeatEmail">
+      
+      <span>Senha*</span>
+      <input #password (keydown.enter)="confirmPassword.focus()" class="input" type="password" [(ngModel)]="registerPayload.password">
+
+      <span>Confirme a Senha*</span>
+      <input #confirmPassword (keydown.enter)="showSign = true" class="input" type="password" [(ngModel)]="registerPayload.repeatPassword">
+
+      <p>*Campos obrigatórios</p>
+      <p>Ao registrar-me, concordo com os termos de uso a Política de Privacidade do aplicativo.</p>
+    </div>
+
+    <ion-button class="button" [class.disabled]="!canLogin()" (click)="login()">
+      {{ setButtonMessage() }}
+      <app-half-circle-spinner *ngIf="isLoading" [animationDuration]="1000" [size]="20" [color]="'#fff'"></app-half-circle-spinner>
+    </ion-button>
+    <p *ngIf="!showSign">Não possui conta? <span (click)="showSign = true">Cadastar-se</span></p>
   </div>
-
 </div>
-
-<ng-template #signing>
-  <body class="login--inputs">
-
-  <label for="loginEmail" class="login--inputs--title">E-mail</label>
-  <input (keydown.enter)="password.focus()" class="login--inputs--email input-default" type="text" [(ngModel)]="loginPayload.email">
-  <!-- <input id="loginEmail" class="login--inputs--email input-default" type="text"> -->
-
-  <label for="loginPassword" class="login--inputs--title">Senha</label>
-  <!-- <input id="loginPassword" class="login--inputs--password input-default" type="password"> -->
-  <input #password (keydown.enter)="login()" class="login--inputs--password input-default" type="password" [(ngModel)]="loginPayload.password">
-
-  <ion-button class="button" [class.disabled]="!canLogin()" (click)="login()">
-    {{ isLoading ? 'carregando...' : 'confirmar' }}
-    <app-half-circle-spinner *ngIf="isLoading" [animationDuration]="1000" [size]="25" [color]="'white'">
-    </app-half-circle-spinner>
-  </ion-button>
-
-  </body>
-
-<footer class="login--footer">
-  <span class="login--footer-account">Não possui conta? &nbsp;</span>
-  <span class="login--footer-register" (click)="isSigning = !isSigning">Cadastre-se</span>
-</footer>
-</ng-template>
-
-
-<ng-template #signup>
-<body class="login--inputs">
-
-<label for="name" class="login--inputs--title">Nome completo*</label>
-<input id="name" class="login--inputs--email input-default" type="text" [(ngModel)]="registerPayload.name">
-
-<label for="email" class="login--inputs--title">E-mail*</label>
-<input id="email" class="login--inputs--password input-default" type="text" [(ngModel)]="registerPayload.email">
-
-<label for="emailConfirmation" class="login--inputs--title">Confirme o e-mail</label>
-<input id="emailConfirmation" class="login--inputs--password input-default" type="text" [(ngModel)]="registerPayload.confirmEmail">
-
-<label for="password" class="login--inputs--title">Senha</label>
-<input id="password" class="login--inputs--password input-default" type="password" [(ngModel)]="registerPayload.password">
-
-<label for="passwordConfirmation" class="login--inputs--title">Confirme a senha</label>
-<input id="passwordConfirmation" class="login--inputs--password input-default" type="password" [(ngModel)]="registerPayload.confirmPassword">
-
-<span class="signup--required">*Campos obrigatórios</span>
-
-<span class="signup--required">Ao registrar-me, concordo com os termos de uso a Política de Privacidade do aplicativo.</span>
-
-<ion-button class="button" [class.disabled]="!canRegister()" (click)="isSigning = !isSigning">
-  {{ isLoading ? 'carregando...' : 'Criar conta' }}
-  <app-half-circle-spinner *ngIf="isLoading" [animationDuration]="1000" [size]="25" [color]="'white'">
-  </app-half-circle-spinner>
-</ion-button>
-
-</body>
-</ng-template>
