--- a/postit/src/app/pages/main/feed-detail/feed-detail.page.html
+++ b/postit/src/app/pages/main/feed-detail/feed-detail.page.html
@@ -14,10 +14,10 @@
           </ion-avatar>
           <div class="user--info">
             <span class="user--info--name">
-              Julia Santinho
+              Bianca Lopes
             </span>
             <span class="user--info--role">
-              Desenvolvedora Junior
+              Analista de Sistemas Senior
             </span>
           </div>
         </header>
