--- a/postit/src/app/components/profile/menu.component.html
+++ b/postit/src/app/components/profile/menu.component.html
@@ -7,9 +7,10 @@
       <span class="user--info--name">Julia Fonseca</span>
       <span class="user--info--role">Desenvolvedora Junior</span>
     </div>
-    <button class="read--more" type="button" [routerLink]="['/feed', postit.id]">
+    <!-- <button class="read--more" type="button" [routerLink]="['/profile']">
       Ler mais +
     </button>
+  -->
   </header>
   <main>
     <div class="title">
