--- a/postit/src/app/pages/login/login.page.html
+++ b/postit/src/app/pages/login/login.page.html
@@ -5,7 +5,7 @@
   <div class="container" [class.container--sign]="showSign">
     <div class="container--header" [class.container--header__row]="showSign">
       <img *ngIf="showSign" (click)="showSign = false" src="../../../assets/images/CADASTRO/Caminho 90.svg">
-      <app-logo src="../../../assets/images/LOGO.svg" [full]="false" (clicked)="logoClick()"></app-logo>
+      <app-logo [class.signing--logo--img]="showSign" src="../../../assets/images/LOGO.svg" [full]="false" (onClick)="logoClick($event)"></app-logo>
     </div>
 
     <div *ngIf="!showSign" class="container--inputs">
@@ -35,9 +35,10 @@
       <p>Ao registrar-me, concordo com os termos de uso a Política de Privacidade do aplicativo.</p>
     </div>
 
-    <ion-button class="button" [disabled]="isLoading || !canLogin()" (click)="login()">
-      {{ setButtonMessage() }}
-      <app-half-circle-spinner *ngIf="isLoading" [animationDuration]="1000" [size]="20" [color]="'#fff'"></app-half-circle-spinner>
+    <ion-button class="button" [class.disabled]="!canRegister()" (click)="isSigning = !isSigning">
+      {{ isLoading ? 'carregando...' : 'Criar conta' }}
+      <app-half-circle-spinner *ngIf="isLoading" [animationDuration]="1000" [size]="25" [color]="'white'">
+      </app-half-circle-spinner>
     </ion-button>
     <p *ngIf="!showSign">Não possui conta? <span (click)="showSign = true">Cadastar-se</span></p>
   </div>
