--- a/postit/src/app/pages/login/login.page.html
+++ b/postit/src/app/pages/login/login.page.html
@@ -35,7 +35,7 @@
       <p>Ao registrar-me, concordo com os termos de uso a Política de Privacidade do aplicativo.</p>
     </div>
 
-    <ion-button class="button" [class.disabled]="!canRegister()" (click)="isSigning = !isSigning">
+    <ion-button class="button" [class.disabled]="!canRegister()" (click)="register()">
       {{ isLoading ? 'carregando...' : 'Criar conta' }}
       <app-half-circle-spinner *ngIf="isLoading" [animationDuration]="1000" [size]="25" [color]="'white'">
       </app-half-circle-spinner>
