--- a/postit/src/app/modals/postit-modal.component.html
+++ b/postit/src/app/modals/postit-modal.component.html
@@ -1,20 +1,15 @@
 <div class="postit-modal" [style.background-color]="color">
+
   <span *ngIf="create" class="postit-modal--close" (click)="closeModal()">X</span>
 
   <span *ngIf="!create" class="postit-modal--options" id="left-start">...</span>
-
-  <ion-popover
-    trigger="left-start"
-    side="left"
-    alignment="start"
-    [dismissOnSelect]="true"
-  >
+  <ion-popover trigger="left-start" side="left" alignment="start" [dismissOnSelect]="true">
     <ng-template>
       <ion-content class="ion-padding postit-modal--options-box">
         <ion-list>
-          <ion-item button="true" detail="false" (click)="create = true">Editar</ion-item
-          ><ion-item button="true" detail="false">Publicar no feed</ion-item
-          ><ion-item button="true" detail="false" (click)="deletePostit()">Excluir nota</ion-item>
+          <ion-item button="true" detail="false" (click)="create = true">Editar</ion-item>
+          <ion-item button="true" detail="false" (click)="publishPostit()">Publicar no feed</ion-item>
+          <ion-item button="true" detail="false" (click)="deletePostIt()">Excluir nota</ion-item>
           <ion-item button="true" detail="false" (click)="closeModal()">Fechar nota</ion-item>
         </ion-list>
       </ion-content>
@@ -22,25 +17,23 @@
   </ion-popover>
 
   <header>
-    <input
-      [readOnly]="!create"
-      class="postit-modal--title"
-      type="text"
-      [(ngModel)]="postit.title"
-      placeholder="Título da nota"
-    />
+    <input [readOnly]="!create"
+           class="postit-modal--title"
+           type="text"
+           [(ngModel)]="postIt.title"
+           placeholder="Título da nota">
   </header>
 
   <main>
-    <textarea
-      [readOnly]="!create"
-      class="postit-modal--annotation"
-      [(ngModel)]="postit.annotation"
-      placeholder="Inserir anotações aqui"
-    ></textarea>
+    <textarea [readOnly]="!create"
+              class="postit-modal--annotation"
+              [(ngModel)]="postIt.annotation"
+              placeholder="Inserir anotações aqui"></textarea>
   </main>
 
   <footer>
-    <span (click)="savePostit()">Colar no mural</span>
+    <span [class.disabled]="isLoading" (click)="savePostIt()">Colar no mural</span>
+
+    <ion-spinner *ngIf="isLoading" name="crescent"></ion-spinner>
   </footer>
 </div>
