--- a/postit/src/theme/button.scss
+++ b/postit/src/theme/button.scss
@@ -5,9 +5,10 @@
   font-style: italic;
   font-size: 0.8rem;
   width: 90%;
-  height: 3.5rem;
+  min-height: 3.5rem;
   margin-left: auto;
   margin-right: auto;
   margin-top: 2rem;
   text-transform: capitalize;
+
 }
