--- a/postit/src/app/components/feed-item/feed-item.component.scss
+++ b/postit/src/app/components/feed-item/feed-item.component.scss
@@ -1,117 +1,121 @@
-.feed-item  {
-    background-color: #D7DF6B;
+.feed-item {
     width: 100%;
     z-index: 100;
     padding: 1rem;
-    
+  
     header {
+      display: flex;
+      align-items: center;
+  
+      .user--avatar {
+        width: 3rem;
+        height: 3rem;
+      }
+  
+      .user--info {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        flex: 1;
+        padding-left: 1.5rem;
+  
+        span {
+          color: #4e4e4e;
+        }
+  
+        &--name {
+          font-size: 1rem;
+          font-style: italic;
+          font-weight: bold;
+        }
+  
+        &--role {
+          font-size: 0.7rem;
+        }
+      }
+  
+      .read--more {
+        width: 5rem;
+        height: 2rem;
+        background: none;
+        border: none;
+        color: #4e4e4e;
+        font-weight: bold;
+      }
+    }
+  
+    main {
+      padding: 1rem;
+      color: #4e4e4e;
+      min-height: 15rem;
+      max-height: 15rem;
+  
+      .title {
+        font-weight: bold;
+      }
+  
+      .annotation {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 8;
+        line-clamp: 8;
+      }
+    }
+  
+    footer {
+      display: flex;
+  
+      .comment--section {
+        flex: 1;
         display: flex;
         align-items: center;
-        width: 100%;
-    
-        .user--avatar {
-            width: 3rem;
-            height: 3rem;
+        justify-content: space-evenly;
+        border-radius: 1rem;
+        border: 1px solid #000;
+        padding: 0 0.4rem;
+  
+        input {
+          background: transparent;
+          border: none;
+          color: #000;
+          outline: 0;
         }
-    
-        .user--info {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            padding-top: .2rem;
-            padding-left: 1.1rem;
-
-            span {
-                color: #4E4E4E;
-            }
-    
-            &--name {
-                font-size: .95rem;
-                font-style: italic;
-                font-weight: 600;
-            }
-    
-            &--role {
-                font-size: .68rem;
-                font-weight: 500;
-            }
+  
+        button {
+          background: none;
+          color: #4e4e4e;
         }
-    
-        .read--more {
-            margin-top: -.8rem;
-            font-size: .81rem;
-            background: none;
-            border: none;
-            font-weight: bold;
-            text-align: end;
-    
-            color: #4E4E4E;
-        }
+      }
     }
-    
-    main {
-        color: #4E4E4E;
-        width: 100%;
-        max-height: 14.5rem;
-        min-height: 14.5rem;
-
-        .title {
-            padding: .6rem 0 1.5rem 0;
-            font-size: 1.18rem;
-            font-weight: 500;  
-        }
-
-        .annotation {
-            font-size: .82rem;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-box-orient: vertical;
-            -webkit-line-clamp: 7;
-            line-clamp: 7;
-        }
+  
+    .actions--section {
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      width: 5rem;
+  
+      img {
+        width: 1.5rem;
+        height: 1.5rem;
+      }
     }
-    
-    footer {
-        display: flex;
-    
-        .comment--section {
-            flex: 1;    
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            border-radius: .8rem;
-            border: 1px solid #4E4E4E;
-            padding: .25rem .7rem;
-
-            input {
-                background-color: transparent;
-                border: none;
-                color: #606060;
-                outline: 0;
-                font-size: .82rem;
-            }
-
-            button {
-                background: none;
-                color: #606060;
-                font-weight: 500;
-                font-size: .82rem;
-            }
-        }
-    
-        .actions--section {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 4.5rem;
-            padding-left: 1rem;
-        
-            img {
-                width: 1.3rem;
-                height: 1.3rem;
-            }
-        }
+  }
+  
+  .heart {
+    &--filled {
+      height: 1.5rem;
+      width: 1.5rem;
+      transform: translateZ(0);
+  
+      --heart-scale: 1;
     }
-}
+  
+    &--core {
+      transition: cubic-bezier(0.83, 0, 0.17, 1) 1s transform;
+      transform: scale(var(--heart-scale, 0));
+      transform-origin: center center;
+    }
+  }
