--- a/postit/src/app/pages/main/feed/feed.page.html
+++ b/postit/src/app/pages/main/feed/feed.page.html
@@ -9,7 +9,9 @@
     <ng-container *ngFor="let post of postItArray">
       <div class="feed-item">
         <app-feed-item [postIt]="post"></app-feed-item>
-      </div>      
+      </div>
     </ng-container>
+
+    <ion-spinner *ngIf="isLoading" name="crescent"></ion-spinner>
   </main>
 </div>
