--- a/postit/src/app/components/feed-item/feed-item.component.scss
+++ b/postit/src/app/components/feed-item/feed-item.component.scss
@@ -1,121 +1,130 @@
 .feed-item {
-    width: 100%;
-    z-index: 100;
-    padding: 1rem;
-  
-    header {
+  width: 100%;
+  z-index: 100;
+  padding: 1rem;
+
+  header {
+    display: flex;
+    align-items: center;
+
+    .user--avatar {
+      width: 3rem;
+      height: 3rem;
+    }
+
+    .user--info {
       display: flex;
-      align-items: center;
-  
-      .user--avatar {
-        width: 3rem;
-        height: 3rem;
-      }
-  
-      .user--info {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: center;
-        flex: 1;
-        padding-left: 1.5rem;
-  
-        span {
-          color: #4e4e4e;
-        }
-  
-        &--name {
-          font-size: 1rem;
-          font-style: italic;
-          font-weight: bold;
-        }
-  
-        &--role {
-          font-size: 0.7rem;
-        }
-      }
-  
-      .read--more {
-        width: 5rem;
-        height: 2rem;
-        background: none;
-        border: none;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+      flex: 1;
+      padding-left: 1.5rem;
+
+      span {
         color: #4e4e4e;
+      }
+
+      &--name {
+        font-size: 1rem;
+        font-style: italic;
         font-weight: bold;
       }
+
+      &--role {
+        font-size: 0.7rem;
+      }
     }
-  
-    main {
-      padding: 1rem;
+
+    .read--more {
+      width: 5rem;
+      height: 2rem;
+      background: none;
+      border: none;
       color: #4e4e4e;
-      min-height: 15rem;
-      max-height: 15rem;
-  
-      .title {
-        font-weight: bold;
-      }
-  
-      .annotation {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-box-orient: vertical;
-        -webkit-line-clamp: 8;
-        line-clamp: 8;
-      }
+      font-weight: bold;
     }
-  
-    footer {
-      display: flex;
-  
-      .comment--section {
-        flex: 1;
-        display: flex;
-        align-items: center;
-        justify-content: space-evenly;
-        border-radius: 1rem;
-        border: 1px solid #000;
-        padding: 0 0.4rem;
-  
-        input {
-          background: transparent;
-          border: none;
-          color: #000;
-          outline: 0;
-        }
-  
-        button {
-          background: none;
-          color: #4e4e4e;
-        }
-      }
+  }
+
+  main {
+    padding: 1rem;
+    color: #4e4e4e;
+    min-height: 15rem;
+    max-height: 15rem;
+
+    .title {
+      font-weight: bold;
     }
-  
-    .actions--section {
+
+    .annotation {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 8;
+      line-clamp: 8;
+    }
+  }
+
+  .footer {
+    display: grid;
+    grid-template-columns: 1fr 5rem;
+
+    .comment--section {
+      flex: 1;
       display: flex;
       align-items: center;
       justify-content: space-evenly;
-      width: 5rem;
-  
-      img {
-        width: 1.5rem;
-        height: 1.5rem;
+      border-radius: 1rem;
+      border: 1px solid #000;
+      padding: 0 0.4rem;
+      max-width: 100%;
+
+      input {
+        background: transparent;
+        border: none;
+        color: #000;
+        outline: 0;
+        width: 100%;
+      }
+
+      button {
+        background: none;
+        color: #4e4e4e;
       }
     }
   }
-  
-  .heart {
-    &--filled {
-      height: 1.5rem;
+
+  .actions--section {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 0.5rem;
+
+    img {
       width: 1.5rem;
-      transform: translateZ(0);
-  
-      --heart-scale: 1;
-    }
-  
-    &--core {
-      transition: cubic-bezier(0.83, 0, 0.17, 1) 1s transform;
-      transform: scale(var(--heart-scale, 0));
-      transform-origin: center center;
+      height: 1.5rem;
     }
   }
+}
+
+.disabled {
+  opacity: .5;
+  pointer-events: none;
+}
+
+.heart {
+  height: 1.5rem;
+  width: 1.5rem;
+
+  &--filled {
+    transform: translateZ(0);
+
+    --heart-scale: 1;
+  }
+
+  &--core {
+    transition: cubic-bezier(0.83, 0, 0.17, 1) 1s transform;
+    transform: scale(var(--heart-scale, 0));
+    transform-origin: center center;
+  }
+}
