--- a/postit/src/app/pages/main/profile/profile.page.scss
+++ b/postit/src/app/pages/main/profile/profile.page.scss
@@ -1,95 +1,161 @@
-.profile {
-    width: 100%;
-    overflow: hidden auto;
-    max-height: 100%;
-    
-    .detail {
-        z-index: -1;
-        position: fixed;
-        width: 100vw;
-        height: 100vh;
-        object-fit: cover;
-        background-image: linear-gradient(to right,#43acb7, #d9f7a0);
-    }
-
-    .container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        height: auto;
-        border-top-left-radius: 28px;
-        border-top-right-radius: 28px;
-        background-color: #fff;
-        transform: translateY(65px);
-        box-shadow: 0 0 10px #707070;
-
-        .p--container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-            text-transform: capitalize;
-
-            &--menu {
-                position: fixed;
-                right: 1.5rem;
-                top: 3rem;
-            }
-
-            &--avatar {
-                transform: translateY(-28px);
-                border: 10px solid #fff;
-                height: 6.8rem;
-                width: 6.8rem;
-            }
-
-            &--name {
-                color: #343434;
-                font-weight: bold;
-                font-size: 1.26rem;
-                transform: translateY(-35px);
-            }
-
-            &--role {
-                color: #707070;
-                font-weight: 600;
-                font-size: .7rem;
-                margin-top: -38px;
-            }
-        }
-
-        .n--container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 100%;
-            padding: 0 1.5rem;
-
-            &--title {
-                padding: 1.3rem 0;
-                text-transform: uppercase;
-                color: #343434;
-                font-weight: bold;
-                font-size: 1.35rem;
-            }
-        }
-    }
-
-    main {
-        overflow: hidden auto;
+.profile{
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+    filter: brightness(1);
+    transition: filter 250ms;
+  
+    &--background{
+      height: 13rem;
+      width: 100%;
+      background: linear-gradient(45deg, #A7CBE5, #D9E2B7);
+      overflow: hidden;
+      img{
         width: 100%;
-
-        .profile-item {
-            margin-bottom: 1rem;
-
-            app-profile-item {
-                width: 100%;
-                height: 100%;
-            }
-
-            &:last-child {
-                margin-bottom: 6.5rem;
-            }
-        }
+      }
     }
-}
+  
+    &--container{
+      width: 100%;
+      height: 100%;
+      margin-top: -10rem;
+  
+      border-radius: 28px 28px 0 0;
+  
+      background-color: white;
+      box-shadow: 0px -2px 6px #0000001A
+    }
+  
+    &--header{
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  
+      &--img{
+        $img-size: 7rem;
+        height: $img-size;
+        width: $img-size;
+        margin-top: -$img-size/4;
+  
+        img{
+          border-radius: 50%;
+          object-fit: cover;
+          border: 10px solid white;
+        }
+      }
+  
+      &--name{
+        font-size: 22px;
+      }
+  
+      &--profession{
+        font-size: small;
+        color: #707070;
+      }
+  
+      &--menu{
+        position: absolute;
+        top: 3rem;
+        right: 1.5rem;
+        
+      }
+    }
+  
+    &--title{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 1rem;
+    }
+  
+  }
+  
+  .postit{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding: 0 2rem 7rem 2rem;
+    gap: 2rem;
+  }
+  
+  
+  .config{
+    position: fixed;
+    top: 0;
+    right: 0;
+  
+    height: 100%;
+    width: 20rem;
+  
+    background: white;
+  
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 250ms;
+  
+    &--backbutton{
+      position: absolute;
+      left: 2rem;
+      font-size: xx-large;
+    }
+  
+    header{
+      padding: 4rem;
+  
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #707070;
+    }
+  
+    &--list{
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      padding-right: 1rem;
+      color: #707070;
+  
+      p{
+        font-style: italic;
+      }
+    }
+  
+    footer{
+      position: absolute;
+      bottom: 2rem;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+    }
+  }
+  
+  .settings-enable{
+    opacity: 1 !important;
+    pointer-events: all;
+    z-index: 9999;
+  
+    &--brightness{
+      background: rgba(0,0,0,0.5) !important;
+    }
+  
+    &--profile{
+      overflow: hidden;
+    }
+  }
+  
+  .brightness{
+    z-index: 1;
+  
+    position: absolute;
+    top: 0;
+    pointer-events: none;
+  
+    height: 100vh;
+    width: 100vw;
+  
+    background: rgba(0,0,0,0);
+    transition: background-color 0.5s;
+  }
