--- a/postit/src/app/app.component.html
+++ b/postit/src/app/app.component.html
@@ -1,6 +1,4 @@
 <ion-app>
-
-  <ion-router-outlet id="main-content"></ion-router-outlet>
+  <ion-router-outlet></ion-router-outlet>
   <app-navbar *ngIf="canShowNavbar"></app-navbar>
-  
 </ion-app>
