--- a/postit/src/app/pages/main/profile/profile.page.scss
+++ b/postit/src/app/pages/main/profile/profile.page.scss
@@ -38,7 +38,7 @@
         $img-size: 7rem;
         height: $img-size;
         width: $img-size;
-        margin-top: -$img-size/4;
+        margin-top: calc($img-size/4);
   
         img{
           border-radius: 50%;
