--- a/postit/src/app/pages/main/feed/feed.page.scss
+++ b/postit/src/app/pages/main/feed/feed.page.scss
@@ -1,9 +1,7 @@
 .feed {
-    position: absolute;
+    position: relative;
     overflow: hidden auto;
     max-height: 100%;
-    padding: 0 1.5rem;
-
 
     .detail {
         position: fixed;
@@ -20,6 +18,7 @@
 
         display: flex;
         justify-content: center;
+
         margin: 2rem 0;
 
         img {
@@ -28,16 +27,11 @@
     }
 
     main {
-        overflow: hidden auto;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         width: 100%;
+        padding: 1.5rem;
 
         .feed-item {
             margin-bottom: 1rem;
-            width: 100%;
-
 
             app-feed-item {
                 width: 100%;
@@ -45,7 +39,7 @@
             }
 
             &:last-child {
-                margin-bottom: 6.5rem;
+                margin-bottom: 5rem;
             }
         }
     }
