feat(home-environment): change swagger and notes

--- a/postit/src/app/pages/main/profile/profile.page.html
+++ b/postit/src/app/pages/main/profile/profile.page.html
@@ -3,7 +3,7 @@
   <div class="profile" [class.settings-enable--profile]="isSettingsEnabled">
 
     <div class="profile--background">
-      <img src="../../../../assets/images/Grupo 19.svg" alt="">
+      <img src="../../../../assets/images/perfil/Grupo 19.svg" alt="">
     </div>
 
     <div class="profile--container">
@@ -51,14 +51,14 @@
   </header>
 
   <div class="config--list">
-    <p (click)="clickConfigList(profileSettingsEnum.EDIT_PROFILE)">Editar perfil</p>
-    <p (click)="clickConfigList(profileSettingsEnum.EDIT_PROFILE_PICTURE)">Editar foto de perfil</p>
-    <p (click)="clickConfigList(profileSettingsEnum.EXIT)">Sair</p>
-    <p (click)="clickConfigList(profileSettingsEnum.ABOUT_US)">Sobre nós</p>
+  <p (click)="clickConfigList(profileSettingsEnum.EDIT_PROFILE)">Editar perfil</p>
+  <p (click)="clickConfigList(profileSettingsEnum.EDIT_PROFILE_PICTURE)">Editar foto de perfil</p>
+  <p (click)="clickConfigList(profileSettingsEnum.EXIT)">Sair</p>
+  <p (click)="clickConfigList(profileSettingsEnum.ABOUT_US)">Sobre nós</p>
   </div>
 
   <footer>
-    <img src="../../../../assets/images/LOGO.svg" alt="">
+    <img src="assets/imgs/login_logo.svg" alt="">
   </footer>
 
 </section>
